--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             <div>&and;</div>
         </div>
     </div>
+    <footer class="rodape" >
+        <a href="https://www.linkedin.com/in/rafaelharthopfpereira" target="_blank" onclick="linkedin">
+            &copy; Rafael Harthopf Pereira &#128515;
+        </a>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
